tests/snapshots/examples_fixtures/diagnostics_demos__errors__division_by_zero.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/division_by_zero.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/diagnostics_demos/errors/division_by_zero.flx:8:1
  |
8 | print(x / y)
  | ^^^^^^^^^^^^
  | ------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/division_by_zero.flx:8:1
  |
8 | print(x / y)
  | ^^^^^^^^^^^^
  | ------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/division_by_zero.flx:8:1
  |
8 | print(x / y)
  | ^^^^^^^^^^^^
  | ------------ requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 3 errors.
== stdout ==
<not executed>
