tests/snapshots/examples_fixtures/diagnostics_demos__errors__empty_match_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/empty_match_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E430]: Any Type Inferred

Could not determine a concrete type for `x`. Inferred type: `_`.

  examples/diagnostics_demos/errors/empty_match_error.flx:2:1
  |
2 | let x = match 1 { };
  | ^^^^^^^^^^^^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn x(x: Int, y: Int): Int`


error[E014]: Empty Match

Match expression must have at least one arm.

  examples/diagnostics_demos/errors/empty_match_error.flx:2:9
  |
2 | let x = match 1 { };
  |         ^^^^^^^^^^^

Hint:
  Add at least one pattern match arm: match value { pattern -> expr; }


error[E015]: Non-Exhaustive Match

Match is non-exhaustive without an unguarded catch-all arm.

  examples/diagnostics_demos/errors/empty_match_error.flx:2:9
  |
2 | let x = match 1 { };
  |         ^^^^^^^^^^^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/diagnostics_demos/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/empty_match_error.flx:3:1
  |
3 | print(x);
  | ^^^^^^^^
  | -------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 6 errors.
== stdout ==
<not executed>
