tests/snapshots/examples_fixtures/diagnostics_demos__errors__immutable_reassignment.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/immutable_reassignment.flx
== compile ==
failed (compile)
== diagnostics ==
error[E002]: Immutable Binding

Cannot reassign to immutable variable `x`.

  examples/diagnostics_demos/errors/immutable_reassignment.flx:7:1
  |
7 | x = 20
  | ^^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_x = ...`).


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics_demos/errors/immutable_reassignment.flx:8:1
  |
8 | print(x)
  | ^^^^^^^^
  | -------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/immutable_reassignment.flx:8:1
  |
8 | print(x)
  | ^^^^^^^^
  | -------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/immutable_reassignment.flx:8:1
  |
8 | print(x)
  | ^^^^^^^^
  | -------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 4 errors.
== stdout ==
<not executed>
