tests/snapshots/examples_fixtures/diagnostics_demos__errors__match_guard_non_exhaustive_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/match_guard_non_exhaustive_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

A guarded wildcard `_ if ...` does not guarantee exhaustiveness because the guard may fail.

  examples/diagnostics_demos/errors/match_guard_non_exhaustive_error.flx:4:22
  |
4 | let non_exhaustive = match 42 {
  |                      ^^^^^^^^^^
5 |     _ if true -> 1,
  | ^^^^^^^^^^^^^^^^^^^
6 | };
  | ^

Hint:
  Add an unguarded `_ -> ...` fallback arm after guarded arms.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/diagnostics_demos/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/diagnostics_demos/errors/match_guard_non_exhaustive_error.flx:7:1
  |
7 | print(non_exhaustive);
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 4 errors.
== stdout ==
<not executed>
